cabal-version: 2.2

name: systranything
version: 0.1.0.0
synopsis: Let you put anything in the system tray
homepage: https://github.com/jecaro/systranything
author: Jean-Charles Quillet
maintainer: jeancharles.quillet@gmail.com
license: MIT
license-file: LICENSE
category: Desktop
build-type: Simple

executable systranything
  main-is:
    Main.hs
  hs-source-dirs:
    systranything
  other-modules:
    Model.Checkbox
    Model.Command
    Model.Common
    Model.Indicator
    Model.Internal
    Model.Item
    Model.Label
    Model.RadioGroup
    Model.RadioButton
    Model.Root
    Model.SubMenu
    Options
  build-depends:
    aeson,
    base >= 4.17 && < 5,
    bytestring,
    extra,
    gi-ayatana-appindicator3,
    gi-glib,
    gi-gobject,
    gi-gdk,
    gi-gtk,
    optparse-applicative,
    text,
    typed-process,
    unliftio,
    yaml,
  default-language:
    Haskell2010
  default-extensions:
    DeriveGeneric
    DerivingStrategies
    OverloadedLabels
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StrictData
    TupleSections
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages
    -threaded
    -with-rtsopts=-N
