cabal-version: 2.2

name: systranything
version: 0.1.3.0
synopsis: Let you put anything in the system tray
homepage: https://github.com/jecaro/systranything
author: Jean-Charles Quillet
maintainer: jeancharles.quillet@gmail.com
license: MIT
license-file: LICENSE
category: Desktop
build-type: Simple
description:
  `systranything` creates a system tray menu based on a YAML file. The YAML
  contains the specification of the menu items with shell commands to execute
  when the items are clicked.
tested-with:
  GHC == 9.4.8,
  GHC == 9.6.4,
  GHC == 9.8.2
extra-source-files:
  cabal.project
extra-doc-files:
  CHANGELOG.md
  README.md
  demo.gif
data-files:
  tests/data/example.yaml

source-repository head
  type: git
  location: https://github.com/jecaro/systranything.git

common defaults
  default-language:
    GHC2021
  default-extensions:
    DerivingStrategies
    OverloadedLabels
    OverloadedStrings
    RecordWildCards
    StrictData
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages

library
  import:
    defaults
  hs-source-dirs:
    lib
  exposed-modules:
    Model.Checkbox
    Model.Command
    Model.Common
    Model.Indicator
    Model.Internal
    Model.Item
    Model.Label
    Model.RadioButton
    Model.RadioGroup
    Model.Root
    Model.SubMenu
    Paths_systranything
  autogen-modules:
    Paths_systranything
  build-depends:
    aeson >= 2.1.2 && < 2.3,
    base >= 4.17.2 && < 5,
    bytestring >= 0.11.5 && < 0.13,
    extra >= 1.7.16 && < 1.9,
    gi-ayatana-appindicator3 >= 0.1.1 && < 0.2,
    gi-gdk3 >= 3.0.29 && < 3.1,
    gi-glib >= 2.0.30 && < 2.1,
    gi-gobject >= 2.0.31 && < 2.1,
    gi-gtk3 >= 3.0.43 && < 3.1,
    text >= 2.0.2 && < 2.2,
    typed-process >= 0.2.11 && < 0.3,

executable systranything
  import:
    defaults
  main-is:
    Main.hs
  hs-source-dirs:
    systranything
  other-modules:
    Options
    Paths_systranything
  autogen-modules:
    Paths_systranything
  build-depends:
    base,
    gi-glib,
    gi-gtk3,
    optparse-applicative >= 0.18.1 && < 0.20,
    systranything,
    unliftio >= 0.2.25 && < 0.3,
    yaml >= 0.11.11 && < 0.12,
  ghc-options:
    -threaded
    -with-rtsopts=-N

test-suite tests
  import:
    defaults
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    tests
  main-is:
    Main.hs
  other-modules:
    Tests.Model.Common
    Tests.Model.Root
  ghc-options: -F -pgmF=tasty-autocollect
  build-depends:
    base,
    hspec-expectations >= 0.8.4 && < 0.9,
    systranything,
    tasty >= 1.4.3 && < 1.6,
    tasty-hunit-compat >= 0.2.0 && < 0.3,
    text,
    yaml
  if impl(ghc < 9.6)
    build-depends:
      tasty-autocollect == 0.4.2
  else
    build-depends:
      tasty-autocollect >= 0.4.3 && < 0.5

